--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
   <name>SampleProject</name>
   <url>http://maven.apache.org</url>
   
+  <properties>
+  <sonar.organization>marcussacapuces91</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  <sonar.projectKey>Marcussacapuces91_jenkins-sample</sonar.projectKey>
+ </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
